Resolves: tdf#87686 don't refresh index entry from selection on regain focus

Remain populating it from the initial selection on popup, but on
losing focus and regaining it, leave the contents alone. Provide a refresh
button to provide access to optionally updating the contents from the
document selection.

Change-Id: Ifcde5fac341655f1219f4d2a7057e788d3bb0b18